try to fix image rescaling on mobile again pt 6

--- a/assets/main.css
+++ b/assets/main.css
@@ -47,13 +47,29 @@ img {
   max-width: 100%;
   vertical-align: middle; }
 
-.content {
-  margin-left: auto;
-  margin-right: auto;
-  width:450px;
-  max-height:400px;
+.parent {
+  width: 450px;
+  margin: auto;
+}
+
+.container {
+  display: block;
   width: 100%;
   height: auto;
+  position: relative;
+  overflow: hidden;
+  padding: 88.89% 0 0 0; 
+}
+
+.container img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 /**
  * Figures
